core/api/lightui.h

// ========== 类型定义 ==========

typedef struct LightUIWindow* LightUIHandle;
// 状态变更回调
typedef void (*LightUIStateCallback)(const char* name, const char* value_json,
                                     void* user_data);
// ========== 数组操作（线程安全） ==========

LIGHTUI_API int lightui_state_array_push(LightUIHandle handle, const char* name,
                                         const char* item_json);
LIGHTUI_API int lightui_state_array_push_int(LightUIHandle handle,
                                             const char* name, int64_t value);
LIGHTUI_API int lightui_state_array_push_double(LightUIHandle handle,
                                                const char* name, double value);
LIGHTUI_API int lightui_state_array_push_string(LightUIHandle handle,
                                                const char* name,
                                                const char* value);
LIGHTUI_API int lightui_state_array_push_bool(LightUIHandle handle,
                                              const char* name, bool value);
LIGHTUI_API int lightui_state_array_pop(LightUIHandle handle, const char* name);
LIGHTUI_API int lightui_state_array_shift(LightUIHandle handle,
                                          const char* name);
LIGHTUI_API int lightui_state_array_unshift(LightUIHandle handle,
                                            const char* name,
                                            const char* item_json);
LIGHTUI_API int lightui_state_array_remove(LightUIHandle handle,
                                           const char* name, int index);
LIGHTUI_API int lightui_state_array_clear(LightUIHandle handle,
                                          const char* name);
LIGHTUI_API int lightui_state_array_set(LightUIHandle handle, const char* name,
                                        int index, const char* item_json);
LIGHTUI_API int lightui_state_array_set_int(LightUIHandle handle,
                                            const char* name, int index,
                                            int64_t value);
LIGHTUI_API int lightui_state_array_set_double(LightUIHandle handle,
                                               const char* name, int index,
                                               double value);
LIGHTUI_API int lightui_state_array_set_string(LightUIHandle handle,
                                               const char* name, int index,
                                               const char* value);
// ========== 对象操作（线程安全） ==========

LIGHTUI_API int lightui_state_object_set(LightUIHandle handle, const char* name,
                                         const char* key,
                                         const char* value_json);
LIGHTUI_API int lightui_state_object_set_int(LightUIHandle handle,
                                             const char* name, const char* key,
                                             int64_t value);
LIGHTUI_API int lightui_state_object_set_double(LightUIHandle handle,
                                                const char* name,
                                                const char* key, double value);
LIGHTUI_API int lightui_state_object_set_string(LightUIHandle handle,
                                                const char* name,
                                                const char* key,
                                                const char* value);
LIGHTUI_API int lightui_state_object_set_bool(LightUIHandle handle,
                                              const char* name, const char* key,
                                              bool value);
LIGHTUI_API int lightui_state_object_remove(LightUIHandle handle,
                                            const char* name, const char* key);
LIGHTUI_API int lightui_state_object_clear(LightUIHandle handle,
                                           const char* name);
// ========== 数值操作（线程安全，原子） ==========

LIGHTUI_API int lightui_state_increment(LightUIHandle handle, const char* name,
                                        double delta);
LIGHTUI_API int lightui_state_multiply(LightUIHandle handle, const char* name,
                                       double factor);
// ========== 字符串操作（线程安全） ==========

LIGHTUI_API int lightui_state_string_append(LightUIHandle handle,
                                            const char* name,
                                            const char* suffix);
LIGHTUI_API int lightui_state_string_prepend(LightUIHandle handle,
                                             const char* name,
                                             const char* prefix);
// ========== 监听 ==========

LIGHTUI_API int lightui_state_watch(LightUIHandle handle, const char* name,
                                    LightUIStateCallback callback,
                                    void* user_data);
LIGHTUI_API void lightui_state_unwatch(LightUIHandle handle, int watch_id);
// ========== 批量操作 ==========

LIGHTUI_API void lightui_state_batch_begin(LightUIHandle handle);
LIGHTUI_API void lightui_state_batch_end(LightUIHandle handle);
// ========== 队列控制 ==========

LIGHTUI_API void lightui_state_set_merge_mode(LightUIHandle handle,
                                              bool enable);
LIGHTUI_API int lightui_process_queue(LightUIHandle handle);
LIGHTUI_API int lightui_queue_size(LightUIHandle handle);
// ========== 共享 C 对象 (SharedObject) ==========
//
// 核心思想：Python/JS 共享同一个 QuickJS JSValue 对象。
// - Python 通过 ctypes 调用 set/get 操作同一个 C 对象
// - JS 通过 globalThis.<name> 直接读写同一个对象
// - Python 写入后自动触发 JS __onSharedUpdate() → Preact re-render
//
// 用法：
//   Python: data = app.shared("data"); data.count = 0
//   JS:     data.count  →  0
//           py.increment()  →  Python: data.count += 1  →  UI 自动更新

// 不透明句柄
typedef struct LightUISharedObject* LightUISharedHandle;
// 创建共享对象，注册为 JS globalThis.<name>
LIGHTUI_API LightUISharedHandle lightui_shared_create(LightUIHandle handle,
                                                       const char* name);
// 销毁共享对象
LIGHTUI_API void lightui_shared_destroy(LightUISharedHandle shared);
// ---- 类型化 setter（自动触发 JS __onSharedUpdate） ----

LIGHTUI_API int lightui_shared_set_int(LightUISharedHandle shared,
                                        const char* key, int64_t value);
LIGHTUI_API int lightui_shared_set_double(LightUISharedHandle shared,
                                           const char* key, double value);
LIGHTUI_API int lightui_shared_set_string(LightUISharedHandle shared,
                                           const char* key, const char* value);
LIGHTUI_API int lightui_shared_set_bool(LightUISharedHandle shared,
                                         const char* key, bool value);
LIGHTUI_API int lightui_shared_set_null(LightUISharedHandle shared,
                                         const char* key);
LIGHTUI_API int lightui_shared_set_json(LightUISharedHandle shared,
                                         const char* key, const char* json_str);
// ---- 类型化 getter ----

LIGHTUI_API int64_t lightui_shared_get_int(LightUISharedHandle shared,
                                            const char* key);
LIGHTUI_API double lightui_shared_get_double(LightUISharedHandle shared,
                                              const char* key);
// 返回值由调用者通过 lightui_free() 释放
LIGHTUI_API const char* lightui_shared_get_string(LightUISharedHandle shared,
                                                    const char* key);
LIGHTUI_API bool lightui_shared_get_bool(LightUISharedHandle shared,
                                          const char* key);
// 返回 JSON 字符串，调用者通过 lightui_free() 释放
LIGHTUI_API const char* lightui_shared_get_json(LightUISharedHandle shared,
                                                  const char* key);
// ---- 属性查询 ----

LIGHTUI_API int lightui_shared_get_type(LightUISharedHandle shared,
                                         const char* key);
LIGHTUI_API int lightui_shared_delete(LightUISharedHandle shared,
                                       const char* key);
LIGHTUI_API bool lightui_shared_has(LightUISharedHandle shared,
                                     const char* key);
// ---- 批量更新（抑制中间 __onSharedUpdate 调用） ----

LIGHTUI_API void lightui_shared_batch_begin(LightUISharedHandle shared);
LIGHTUI_API void lightui_shared_batch_end(LightUISharedHandle shared);
// ========== 工具函数 ==========

// 拷贝字符串到 LightUI 运行时分配的内存；调用者需通过 lightui_free() 释放
LIGHTUI_API char* lightui_copy_string(const char* str);
LIGHTUI_API void lightui_free(void* ptr);
LIGHTUI_API const char* lightui_last_error(void);