bindings/python/lightui/_ffi.py


    # 数组操作
    lib.lightui_state_array_push.restype = c_int
    lib.lightui_state_array_push.argtypes = [H, c_char_p, c_char_p]
    lib.lightui_state_array_push_int.restype = c_int
    lib.lightui_state_array_push_int.argtypes = [H, c_char_p, c_int64]
    lib.lightui_state_array_push_double.restype = c_int
    lib.lightui_state_array_push_double.argtypes = [H, c_char_p, c_double]
    lib.lightui_state_array_push_string.restype = c_int
    lib.lightui_state_array_push_string.argtypes = [H, c_char_p, c_char_p]
    lib.lightui_state_array_push_bool.restype = c_int
    lib.lightui_state_array_push_bool.argtypes = [H, c_char_p, c_bool]
    lib.lightui_state_array_pop.restype = c_int
    lib.lightui_state_array_pop.argtypes = [H, c_char_p]
    lib.lightui_state_array_shift.restype = c_int
    lib.lightui_state_array_shift.argtypes = [H, c_char_p]
    lib.lightui_state_array_unshift.restype = c_int
    lib.lightui_state_array_unshift.argtypes = [H, c_char_p, c_char_p]
    lib.lightui_state_array_remove.restype = c_int
    lib.lightui_state_array_remove.argtypes = [H, c_char_p, c_int]
    lib.lightui_state_array_clear.restype = c_int
    lib.lightui_state_array_clear.argtypes = [H, c_char_p]
    lib.lightui_state_array_set.restype = c_int
    lib.lightui_state_array_set.argtypes = [H, c_char_p, c_int, c_char_p]
    lib.lightui_state_array_set_int.restype = c_int
    lib.lightui_state_array_set_int.argtypes = [H, c_char_p, c_int, c_int64]
    lib.lightui_state_array_set_double.restype = c_int
    lib.lightui_state_array_set_double.argtypes = [H, c_char_p, c_int, c_double]
    lib.lightui_state_array_set_string.restype = c_int
    lib.lightui_state_array_set_string.argtypes = [H, c_char_p, c_int, c_char_p]

    # 对象操作
    lib.lightui_state_object_set.restype = c_int
    lib.lightui_state_object_set.argtypes = [H, c_char_p, c_char_p, c_char_p]
    lib.lightui_state_object_set_int.restype = c_int
    lib.lightui_state_object_set_int.argtypes = [H, c_char_p, c_char_p, c_int64]
    lib.lightui_state_object_set_double.restype = c_int
    lib.lightui_state_object_set_double.argtypes = [H, c_char_p, c_char_p, c_double]
    lib.lightui_state_object_set_string.restype = c_int
    lib.lightui_state_object_set_string.argtypes = [H, c_char_p, c_char_p, c_char_p]
    lib.lightui_state_object_set_bool.restype = c_int
    lib.lightui_state_object_set_bool.argtypes = [H, c_char_p, c_char_p, c_bool]
    lib.lightui_state_object_remove.restype = c_int
    lib.lightui_state_object_remove.argtypes = [H, c_char_p, c_char_p]
    lib.lightui_state_object_clear.restype = c_int
    lib.lightui_state_object_clear.argtypes = [H, c_char_p]

    # 数值/字符串操作
    lib.lightui_state_increment.restype = c_int
    lib.lightui_state_increment.argtypes = [H, c_char_p, c_double]
    lib.lightui_state_multiply.restype = c_int
    lib.lightui_state_multiply.argtypes = [H, c_char_p, c_double]
    lib.lightui_state_string_append.restype = c_int
    lib.lightui_state_string_append.argtypes = [H, c_char_p, c_char_p]
    lib.lightui_state_string_prepend.restype = c_int
    lib.lightui_state_string_prepend.argtypes = [H, c_char_p, c_char_p]

    # 监听
    lib.lightui_state_watch.restype = c_int
    lib.lightui_state_watch.argtypes = [H, c_char_p, LightUIStateCallback, c_void_p]
    lib.lightui_state_unwatch.restype = None
    lib.lightui_state_unwatch.argtypes = [H, c_int]

    # 批量/队列
    lib.lightui_state_batch_begin.restype = None
    lib.lightui_state_batch_begin.argtypes = [H]
    lib.lightui_state_batch_end.restype = None
    lib.lightui_state_batch_end.argtypes = [H]
    lib.lightui_state_set_merge_mode.restype = None
    lib.lightui_state_set_merge_mode.argtypes = [H, c_bool]
    lib.lightui_process_queue.restype = c_int
    lib.lightui_process_queue.argtypes = [H]
    lib.lightui_queue_size.restype = c_int
    lib.lightui_queue_size.argtypes = [H]

    # 工具
    lib.lightui_free.restype = None
    lib.lightui_free.argtypes = [c_void_p]
    lib.lightui_copy_string.restype = c_void_p
    lib.lightui_copy_string.argtypes = [c_char_p]

    lib.lightui_last_error.restype = c_char_p
    lib.lightui_last_error.argtypes = []

    # ========== 共享 C 对象 (SharedObject) ==========
    SH = c_void_p  # LightUISharedHandle

    lib.lightui_shared_create.restype = SH
    lib.lightui_shared_create.argtypes = [H, c_char_p]
    lib.lightui_shared_destroy.restype = None
    lib.lightui_shared_destroy.argtypes = [SH]

    # setter
    lib.lightui_shared_set_int.restype = c_int
    lib.lightui_shared_set_int.argtypes = [SH, c_char_p, c_int64]
    lib.lightui_shared_set_double.restype = c_int
    lib.lightui_shared_set_double.argtypes = [SH, c_char_p, c_double]
    lib.lightui_shared_set_string.restype = c_int
    lib.lightui_shared_set_string.argtypes = [SH, c_char_p, c_char_p]
    lib.lightui_shared_set_bool.restype = c_int
    lib.lightui_shared_set_bool.argtypes = [SH, c_char_p, c_bool]
    lib.lightui_shared_set_null.restype = c_int
    lib.lightui_shared_set_null.argtypes = [SH, c_char_p]
    lib.lightui_shared_set_json.restype = c_int
    lib.lightui_shared_set_json.argtypes = [SH, c_char_p, c_char_p]

    # getter
    lib.lightui_shared_get_int.restype = c_int64
    lib.lightui_shared_get_int.argtypes = [SH, c_char_p]
    lib.lightui_shared_get_double.restype = c_double
    lib.lightui_shared_get_double.argtypes = [SH, c_char_p]
    lib.lightui_shared_get_string.restype = c_void_p
    lib.lightui_shared_get_string.argtypes = [SH, c_char_p]
    lib.lightui_shared_get_bool.restype = c_bool
    lib.lightui_shared_get_bool.argtypes = [SH, c_char_p]
    lib.lightui_shared_get_json.restype = c_void_p
    lib.lightui_shared_get_json.argtypes = [SH, c_char_p]

    # 属性查询
    lib.lightui_shared_get_type.restype = c_int
    lib.lightui_shared_get_type.argtypes = [SH, c_char_p]
    lib.lightui_shared_delete.restype = c_int
    lib.lightui_shared_delete.argtypes = [SH, c_char_p]
    lib.lightui_shared_has.restype = c_bool
    lib.lightui_shared_has.argtypes = [SH, c_char_p]

    # 批量更新
    lib.lightui_shared_batch_begin.restype = None
    lib.lightui_shared_batch_begin.argtypes = [SH]
    lib.lightui_shared_batch_end.restype = None
    lib.lightui_shared_batch_end.argtypes = [SH]